# rustylink

./: .gitignore  Cargo.toml  biome.json  flake.nix  package-lock.json  package.json  rustfmt.toml  taplo.toml
.github/workflows/: ci.yml
crates/api/: Cargo.toml  build.rs
crates/api/proto/: sign.proto
crates/api/spec/: components.yaml  main.tsp  openapi.yaml  paths.yaml  tspconfig.yaml
crates/api/src/: api.rs  client.rs  error.rs  identity.rs  lib.rs  models.rs  signing.rs
crates/api/src/models/: auth.rs  common.rs  mod.rs  otp.rs  profile.rs  security.rs  vpn.rs
crates/cli/: Cargo.toml
crates/cli/src/: args.rs  error.rs  login.rs  main.rs  output.rs  profile.rs  security_cmd.rs  vpn_cmd.rs
crates/core/: Cargo.toml
crates/core/src/: auth.rs  context.rs  error.rs  lib.rs  security.rs  state.rs  vpn.rs
crates/core/src/state/: auth.rs  mod.rs  vpn.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: auth_layer.rs  daemon.rs  error.rs  latency.rs  main.rs  persist.rs  server.rs  state.rs  static_assets.rs  supervisor.rs  token.rs  ui.rs
crates/daemon/src/service/: auth.rs  meta.rs  mod.rs  vpn.rs
crates/dns/: Cargo.toml
crates/dns/src/: config.rs  forwarder.rs  lib.rs  resolver.rs  server.rs  synthesis.rs
crates/outbound/: Cargo.toml
crates/outbound/src/: bypass.rs  connector.rs  context.rs  dialer.rs  interface.rs  lib.rs  resolver.rs  snapshot.rs
crates/outbound/src/bypass/: linux.rs  macos.rs  unsupported.rs  windows.rs
crates/outbound/tests/: integration.rs
crates/proto/: Cargo.toml  build.rs
crates/proto/proto/rustylink/daemon/persist/v1/: persisted.proto
crates/proto/proto/rustylink/daemon/v1/: configuration.proto  daemon.proto  errors.proto  meta.proto  session.proto  tunnel.proto  types.proto
crates/proto/proto/rustylink/signing/v1/: signing.proto
crates/proto/src/: lib.rs  projections.rs
crates/tunnel/: Cargo.toml
crates/tunnel/src/: dns.rs  error.rs  lib.rs  outbound.rs  reconnect.rs  route.rs  session.rs  transport.rs  tun.rs
docs/: static-evidence.md
nix/typespec/: default.nix  package.json  pnpm-lock.yaml
ui/: .gitignore  biome.json  buf.gen.yaml  default.nix  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.app.json  vite.config.ts
ui/src/: index.css  main.tsx  router.tsx
ui/src/components/: app-header.tsx  full-screen-loader.tsx  require-token.tsx  status-badge.tsx  theme-toggle.tsx
ui/src/components/ui/: alert.tsx  card.tsx  dialog.tsx  dropdown-menu.tsx  select.tsx  sonner.tsx
ui/src/features/account/: account-section.tsx
ui/src/features/auth/: activate-step.tsx  auth-context.tsx  auth-shell.tsx  auth-wizard.tsx  device-login-step.tsx  login-step.tsx  mfa-step.tsx  oauth-step.tsx  otp-step.tsx
ui/src/features/settings/: settings-section.tsx
ui/src/features/vpn/: connect-card.tsx  connect-dialog.tsx  locations-section.tsx  vpn-utils.ts
ui/src/hooks/: use-session.ts  use-tunnel.ts
ui/src/lib/: errors.ts  query-client.ts  token.ts  transport.ts
ui/src/routes/: auth.tsx  dashboard.tsx  setup.tsx
