[workspace]
members  = ["crates/*"]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
aes                = "0.9.1"
base64             = "0.22.1"
bitflags           = "2.13.0"
cbc                = "0.2.1"
clap               = { version = "4.6.1", features = ["derive", "env"] }
default-net        = "0.22.0"
dirs               = "6.0.0"
etherparse         = "0.20.2"
hex                = "0.4.3"
hickory-proto      = "0.26.1"
hmac               = "0.13.0"
ipnetwork          = "0.21.1"
jiff               = "0.2.28"
machine-uid        = "0.6.0"
openapiv3          = "2.2.0"
prettyplease       = "0.2.37"
progenitor         = "0.14.0"
progenitor-client  = "0.14.0"
prost              = "0.14.4"
rand               = "0.10.1"
reqwest            = { version = "0.13.4", features = ["cookies", "json", "rustls"] }
route_manager      = { version = "0.2.11", features = ["async"] }
serde              = { version = "1.0.228", features = ["derive"] }
serde_json         = "1.0.150"
serde_yaml         = "0.9.34"
sha1               = "0.11.0"
sha2               = "0.11.0"
snafu              = "0.9.1"
socket2            = { version = "0.6.4", features = ["all"] }
strum              = { version = "0.28.0", features = ["derive"] }
syn                = "2.0.117"
tokio              = { version = "1.52.3", features = ["full"] }
tracing            = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
url                = { version = "2.5.8", features = ["serde"] }
uuid               = { version = "1.23.3", features = ["v4", "serde"] }

[workspace.lints.rust]
unsafe_code = "deny"
warnings    = "warn"

[workspace.lints.clippy]
all      = { level = "warn", priority = -1 }
cargo    = { level = "warn", priority = -1 }
nursery  = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

cargo_common_metadata   = "allow"
missing_const_for_fn    = "allow"
missing_errors_doc      = "allow"
multiple_crate_versions = "allow"

[profile.release]
codegen-units = 1
lto           = true
opt-level     = 3
