[workspace]
members  = ["crates/*"]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
aes                   = "0.9.1"
argon2                = "0.5.3"
async-trait           = "0.1.89"
axum                  = "0.8.9"
base64                = "0.22.1"
bitflags              = "2.13.0"
buffa                 = { version = "0.7.1", features = ["json"] }
buffa-types           = { version = "0.7.1", features = ["json"] }
cbc                   = "0.2.1"
clap                  = { version = "4.6.1", features = ["derive", "env"] }
connectrpc            = "0.7.0"
connectrpc-build      = "0.7.0"
connectrpc-reflection = "0.7.0"
cookie                = "0.18.1"
default-net           = "0.22.0"
dirs                  = "6.0.0"
etherparse            = "0.20.2"
hex                   = "0.4.3"
hickory-proto         = "0.26.1"
hmac                  = "0.13.0"
http                  = "1.4.2"
http-body             = "1.0.1"
ipnetwork             = { version = "0.21.1", features = ["serde"] }
jiff                  = { version = "0.2.28", features = ["serde"] }
machine-uid           = "0.6.0"
mime_guess            = "2.0.5"
percent-encoding      = "2.3.2"
qrcode                = { version = "0.14.1", default-features = false }
rand                  = "0.10.1"
reqwest               = { version = "0.13.4", features = ["cookies", "json", "rustls"] }
reqwest-middleware    = "0.5.2"
route_manager         = { version = "0.2.11", features = ["async"] }
rust-embed            = "8.7.2"
serde                 = { version = "1.0.228", features = ["derive"] }
serde_json            = "1.0.150"
serde_with            = "3.21.0"
sha1                  = "0.11.0"
sha2                  = "0.11.0"
snafu                 = "0.9.1"
socket2               = { version = "0.6.4", features = ["all"] }
statig                = { version = "0.3.0", features = ["async"] }
strum                 = { version = "0.28.0", features = ["derive"] }
tokio                 = { version = "1.52.3", features = ["full"] }
tokio-stream          = { version = "0.1.18", features = ["sync"] }
tokio-util            = { version = "0.7.18", features = ["rt"] }
totp-rs               = { version = "5.7.1", features = ["otpauth"] }
tower                 = "0.5.3"
tracing               = "0.1.44"
tracing-subscriber    = { version = "0.3.23", features = ["env-filter", "fmt"] }
tun-rs                = { version = "2.8.1", features = ["async"] }
url                   = { version = "2.5.8", features = ["serde"] }
wildmatch             = "2.6.1"

[workspace.dependencies.tower-http]
features = ["auth", "cors", "trace", "request-id", "util", "validate-request"]
version  = "0.7.0"

[workspace.lints.rust]
unsafe_code = "deny"
warnings    = "warn"

[workspace.lints.clippy]
all      = { level = "warn", priority = -1 }
cargo    = { level = "warn", priority = -1 }
nursery  = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

cargo_common_metadata   = "allow"
missing_const_for_fn    = "allow"
missing_errors_doc      = "allow"
multiple_crate_versions = "allow"

[profile.release]
codegen-units = 1
lto           = true
opt-level     = 3
