[package]
edition.workspace = true
name              = "rustylink-api"
version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
rustylink-proto.path = "../proto"

aes.workspace                = true
async-trait.workspace        = true
base64.workspace             = true
bitflags.workspace           = true
cbc.workspace                = true
cookie.workspace             = true
hex.workspace                = true
hmac.workspace               = true
http.workspace               = true
jiff.workspace               = true
machine-uid.workspace        = true
percent-encoding.workspace   = true
reqwest.workspace            = true
reqwest-middleware.workspace = true
serde.workspace              = true
serde_json.workspace         = true
serde_with.workspace         = true
sha1.workspace               = true
sha2.workspace               = true
snafu.workspace              = true
strum.workspace              = true
tokio.workspace              = true
tracing.workspace            = true
url.workspace                = true

[lints]
workspace = true
