[package]
edition.workspace = true
name              = "rustylink-api"
version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
rustylink-outbound.path = "../outbound"
rustylink-proto.path    = "../proto"

aes.workspace              = true
async-trait.workspace      = true
base64.workspace           = true
bitflags.workspace         = true
bytes.workspace            = true
cbc.workspace              = true
cookie.workspace           = true
hex.workspace              = true
hmac.workspace             = true
http.workspace             = true
http-body-util.workspace   = true
hyper-rustls.workspace     = true
hyper-util.workspace       = true
jiff.workspace             = true
machine-uid.workspace      = true
percent-encoding.workspace = true
serde.workspace            = true
serde_json.workspace       = true
serde_with.workspace       = true
sha1.workspace             = true
sha2.workspace             = true
snafu.workspace            = true
strum.workspace            = true
tokio.workspace            = true
tracing.workspace          = true
url.workspace              = true

[lints]
workspace = true
