[package]
edition.workspace = true
name              = "rustylink"
version.workspace = true

[[bin]]
name = "rustylink"
path = "src/main.rs"

[dependencies]
rustylink-api.path    = "../api"
rustylink-core.path   = "../core"
rustylink-tunnel.path = "../tunnel"

clap.workspace               = true
qrcode.workspace             = true
serde.workspace              = true
serde_json.workspace         = true
snafu.workspace              = true
strum.workspace              = true
tokio.workspace              = true
tracing.workspace            = true
tracing-subscriber.workspace = true
url.workspace                = true

[lints]
workspace = true
