[package]
edition.workspace = true
name              = "rustylink-core"
version.workspace = true

[dependencies]
base64.workspace     = true
dirs.workspace       = true
rustylink-api        = { path = "../api" }
serde.workspace      = true
serde_json.workspace = true
sha2.workspace       = true
snafu.workspace      = true
time.workspace       = true
tokio.workspace      = true
tracing.workspace    = true
url.workspace        = true
uuid.workspace       = true

[lints]
workspace = true
