[package]
edition.workspace = true
name              = "rustylink-core"
version.workspace = true

[dependencies]
rustylink-api.path = "../api"

base64.workspace     = true
dirs.workspace       = true
jiff.workspace       = true
serde.workspace      = true
serde_json.workspace = true
sha2.workspace       = true
snafu.workspace      = true
strum.workspace      = true
tracing.workspace    = true
url.workspace        = true
uuid.workspace       = true

[lints]
workspace = true
