[package]
edition.workspace = true
name              = "rustylink-core"
version.workspace = true

[dependencies]
rustylink-api.path   = "../api"
rustylink-proto.path = "../proto"

base64.workspace     = true
dirs.workspace       = true
hex.workspace        = true
jiff.workspace       = true
rand.workspace       = true
reqwest.workspace    = true
serde.workspace      = true
serde_json.workspace = true
sha2.workspace       = true
snafu.workspace      = true
strum.workspace      = true
totp-rs.workspace    = true
tracing.workspace    = true
url.workspace        = true

[lints]
workspace = true
