[package]
edition.workspace = true
name              = "rustylinkd"
version.workspace = true

[[bin]]
name = "rustylinkd"
path = "src/main.rs"

[features]
# Embed the built web UI (ui/dist) into the binary and serve it from axum.
# Build the UI first (`pnpm -C ui build`), then `cargo build -p rustylinkd --features embed-ui`.
embed-ui = ["dep:rust-embed", "dep:mime_guess"]

[dependencies]
rustylink-api.path      = "../api"
rustylink-core.path     = "../core"
rustylink-outbound.path = "../outbound"
rustylink-proto.path    = "../proto"
rustylink-tunnel.path   = "../tunnel"

axum.workspace                  = true
buffa.workspace                 = true
buffa-types.workspace           = true
clap.workspace                  = true
connectrpc                      = { workspace = true, features = ["axum"] }
connectrpc-reflection.workspace = true
default-net.workspace           = true
dirs.workspace                  = true
hex.workspace                   = true
http.workspace                  = true
jiff.workspace                  = true
mime_guess                      = { workspace = true, optional = true }
rand.workspace                  = true
rust-embed                      = { workspace = true, optional = true }
serde.workspace                 = true
serde_json.workspace            = true
snafu.workspace                 = true
tokio.workspace                 = true
tokio-stream.workspace          = true
tokio-util.workspace            = true
totp-rs.workspace               = true
tower.workspace                 = true
tower-http.workspace            = true
tracing.workspace               = true
tracing-subscriber.workspace    = true
url.workspace                   = true

[lints]
workspace = true
