[package]
edition.workspace = true
name              = "rustylink-proto"
version.workspace = true

[dependencies]
buffa.workspace       = true
buffa-types.workspace = true
connectrpc.workspace  = true
http-body.workspace   = true
serde.workspace       = true
serde_json.workspace  = true

[build-dependencies]
connectrpc-build.workspace = true

[lints]
workspace = true
