[package]
edition.workspace = true
name              = "rustylink-tunnel"
version.workspace = true

[dependencies]
rustylink-api.path = "../api"

base64.workspace        = true
etherparse.workspace    = true
hex.workspace           = true
hickory-proto.workspace = true
ipnetwork.workspace     = true
rand.workspace          = true
route_manager.workspace = true
serde.workspace         = true
serde_json.workspace    = true
snafu.workspace         = true
strum.workspace         = true
tokio.workspace         = true
tracing.workspace       = true

[dependencies.gotatun]
features = ["device", "tun"]
git      = "https://github.com/mnixry/gotatun"

[lints]
workspace = true
