[package]
edition.workspace = true
name              = "rustylink-tunnel"
version.workspace = true

[dependencies]
rustylink-api.path = "../api"

async-trait.workspace   = true
base64.workspace        = true
default-net.workspace   = true
etherparse.workspace    = true
hex.workspace           = true
hickory-proto.workspace = true
hickory-resolver.workspace = true
ipnetwork.workspace     = true
rand.workspace          = true
route_manager.workspace = true
serde.workspace         = true
serde_json.workspace    = true
snafu.workspace         = true
socket2.workspace       = true
strum.workspace         = true
tokio.workspace         = true
tracing.workspace       = true
tun-rs.workspace        = true
url.workspace           = true
wildmatch.workspace     = true

[dependencies.gotatun]
features = ["device"]
git      = "https://github.com/mnixry/gotatun"

[lints]
workspace = true
